--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
             <header class="top-bar">
                 <h1 id="page-title">Tableau de bord</h1>
                 <div class="user-menu">
+
+
+                    <h2>Profil de l'utilisateur</h2>
+    <p>Nom d'utilisateur : <span id="username"></span></p>
+    <p>Email : <span id="email"></span></p>
+    <p>Type d'utilisateur : <span id="userType"></span></p>
+
+    
                     <span class="user-name">Admin</span>
                     <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?w=50&h=50&q=80" alt="User" class="user-avatar">
                 </div>
@@ -111,6 +119,10 @@
             </div>
         </main>
     </div>
+
+
+    
+
     <script src="auth.js"></script>
     <script src="script.js"></script>
 </body>
